examples/good/06-Recursion.tms
int silnia(int x) {

  if (x <= 1) {
    return 1;
  }

  return x * silnia(x-1);
}


void main() {
  int i = silnia(6);
  printInt(i);
  printBool(i == 720);

  return;
}