examples/bad/10-DivisionByZero.tms
int x() {
  return 5-5;
}

void main() {

  int y = 10 / x();

  return;
}